gcutil class LinearLeastSquareFit doesn't initialize some of its fields

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs21
    • Affects Version/s: hs21, 7
    • Component/s: hotspot
    • None
    • gc
    • b02
    • generic
    • generic
    • Verified

        Reported by Donald Gregg at Westinghouse.

        In src/share/vm/gc_implementation/shared/gcUtil.*, the constructor for LinearLeastSquareFit
        does not initialize members _sum_x_squared, _intercept or _slope. They should be initiazed
        to zero.

              Assignee:
              Paul Hohensee
              Reporter:
              Paul Hohensee
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: