7016998: gcutil class LinearLeastSquareFit doesn't initialize some of its fields

Initialize _sum_x_squared, _intercept and _slope in constructor.

Reviewed-by: bobv, coleenp